# pyconfs

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml  requirements.in  setup.cfg  tox.ini
.circleci/: config.yml
.github/workflows/: publish_to_pypi.yml  unit_tests.yml
pyconfs/: __init__.py  _configuration.py  _converters.py  _entry.py  _exceptions.py  _types.py  _util.py  configuration.py  converters.py  exceptions.py
pyconfs/formats/: __init__.py  formats.json
pyconfs/readers/: __init__.py  ini.py  json.py  toml.py  yaml.py
pyconfs/writers/: __init__.py  ini.py  json.py  toml.py  yaml.py
tests/: conftest.py  test_configuration.py  test_files.py  test_types.py
tests/files/: sample.ini  sample.json  sample.toml  sample.yaml
